<resources>
    <string name="app_name">SQLitePractice1</string>
    <string name="save">Сохранить</string>
    <string name="update">Обновить</string>
    <string name="delete">Удалить</string>
    <string name="weight">Вес</string>
    <string name="cost">Цена</string>
    <string name="name">Название</string>
    <string name="change">Изменить</string>
    <string name="input_name">Введите название</string>
    <string name="input_weight">Введите вес</string>
    <string name="input_cost">Введите цену</string>
</resources>