<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <TableRow tools:ignore="UselessParent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:text="@string/name" />

            <EditText
                android:id="@+id/nameET"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:width="150px"
                tools:ignore="Autofill,LabelFor,PxUsage,RtlHardcoded,TextFields" />
        </TableRow>

        <TableRow tools:ignore="UselessParent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:text="@string/weight" />

            <EditText
                android:id="@+id/weightET"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:width="150px"
                tools:ignore="Autofill,LabelFor,PxUsage,RtlHardcoded,TextFields" />
        </TableRow>

        <TableRow tools:ignore="UselessParent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:text="@string/cost" />

            <EditText
                android:id="@+id/costET"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:width="150px"
                tools:ignore="Autofill,LabelFor,PxUsage,RtlHardcoded,TextFields" />
        </TableRow>
    </TableLayout>

</LinearLayout>